# ZeroWaste

./: .gitignore  AveragePrecision.cpp  CMakeLists.txt  IoU.cpp  ReadMe.md
include/: classifier.hpp  common.hpp  metrics.hpp  segmentation.hpp  segmentation_utils.hpp
inputs/Food_leftover_dataset/tray2/bounding_boxes/: img_0.txt  img_1.txt  img_2.txt
inputs/Food_leftover_dataset/tray3/bounding_boxes/: img_0.txt  img_1.txt  img_2.txt
inputs/Food_leftover_dataset/tray4/bounding_boxes/: img_0.txt
inputs/Food_leftover_dataset/tray6/bounding_boxes/: img_0.txt  img_1.txt  img_2.txt  img_3.txt
inputs/Food_leftover_dataset/tray7/bounding_boxes/: img_0.txt  img_1.txt  img_2.txt
inputs/Food_leftover_dataset/tray8/bounding_boxes/: img_0.txt  img_1.txt  img_2.txt
model/: modelKnn.yml  modelKnn1.yml  modelKnn2.yml
src/: classifier.cpp  main.cpp  metrics.cpp  segmentation.cpp  segmentation_utils.cpp
test/: BoW_predictor.cpp  BoW_predictor2.cpp  BoW_predictorKNN.cpp  BoW_predictorKNN2.cpp  BoW_trainer.cpp  BoW_trainer2.cpp  BoW_trainer4.cpp  BoW_trainer5.cpp  BoW_trainerKNN.cpp  BoW_trainerKNN2.cpp  bread.cpp  classifier.cpp  detector.cpp  detector2.cpp  detector3.cpp  detectorFUN.cpp  detectorHIST.cpp  detectorHIST2.cpp  grabcut.cpp  hist.cpp  hist_tester.cpp  j-seg.cpp  pile.sh  segmenter.cpp  segmenter2.cpp  threshTester.cpp  threshTester2.cpp  watershed.cpp  watershed2.cpp  watershed3.cpp
test/model/: codewords.yml  model.yml  testset.yml
